# fungal-cv-qdrant

./: .gitignore  AGENTS.md  BUGFIX_IMAGE_PATH.md  CLAUDE.md  INTEGRATION_SUMMARY.md  MANUAL_WEIGHTED_STRATEGY.md  QUICK_REFERENCE.md  README.md  STRATEGY_COMPARISON_CHARTS.md  VISUALIZATION_CHANGES.md  VISUALIZATION_README.md  VISUALIZATION_UPDATE.md  batch_visualize_complementary.py  config.py  debug_finetuned_features.py  debug_strains.py  docker-compose.yml  ensemble_analysis.py  evaluate_species.py  evaluation_report.typ  example_prediction.py  example_use_trained_weights.py  example_visualize_prediction.py  feature_extractors.py  feature_utils.py  kmeans.py  list_strains.py  prediction.py  preprocess.py  pyproject.toml  query.py  query_utils.py  quick_evaluate.py  reformat_dataset.py  reformat_hierarchical_dataset.py  requirements.txt  run_comprehensive_eval.py  skills-lock.json  strain_to_specy.csv  sync_project_to_cloud.sh  (+11 more)
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
.opencode/: opencode.json
.serena/: project.yml
colab/: DATA_AUGMENTATION_STRATEGY.md  QUICKSTART.md  README_TRAINING_APPROACHES.md  TPU_SETUP.md  TRAINING.md  VIT_NOTES.md  VIT_TRAINING_ANALYSIS.md  train_models.py  train_models_cellvit.py  train_models_fold_efficientnetb1.py  train_models_selfsupervised.py  train_models_triplet_loss.py
docs/: ENSEMBLE_STRATEGY.md  ENSEMBLE_WEIGHTS_EXPLAINED.md  FINETUNED_FEATURES.md  FIX_EVALUATION_STEPS.md  MANUAL_WEIGHTED_IMPLEMENTATION.md  QUICKSTART_FINETUNED.md  TRAINING_PIPELINE.md  TRAINING_QUICKSTART.md  (+2 more)
(+122 files in other folders)
